Quorum/Library/Tests/Templating/Pass/ListNodeInteger.quorum
use Libraries.Containers.Support.ListNode
class Main
    ListNode<integer> head = undefined
    ListNode<integer> tail = undefined
    integer invalidIndex = -1
    integer size = 0
    action Main
        ListNode<integer> node
        Integer i 
        node:value = 2
        
        output "integerPassed"
    end
end